--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@ body{
 }
 
 .number{
-    font-size: 5em;
+    font-size: 5vw;
     display: flex;
     justify-content: center;
     float: left;
@@ -42,7 +42,7 @@ body{
 
 #main-text-container{
     display: flex;
-    font-size: 3em;
+    font-size: 3vw;
     justify-content: center;
     align-content: center;
 }
@@ -53,6 +53,11 @@ body{
     padding-top: 5vh;
 }
 
+#options-container{
+    display: block;
+    clear: both;
+}
+
 .title{
     display: block;
     text-transform: uppercase;
@@ -60,11 +65,12 @@ body{
     justify-content: center;
     align-content: center;
     color: black;
+    font-size: 3vw;
 }
 
-#title-records{
-    font-size: 2em;
-}
+/* #title-records{
+    font-size: 2vw;
+} */
 
 .link{
     text-decoration: none;
@@ -77,7 +83,7 @@ body{
 
 .button-container{
     background-color: rgb(97, 97, 235);
-    font-size: 1.5em;
+    font-size: 1.5vw;
     margin-left: auto;
     margin-right: auto;
     width: 20vw;
@@ -93,7 +99,19 @@ body{
 }
 
 #title-user{
-    font-size: 1.5em;
+    font-size: 2.5vw;
+}
+
+#not-in-user-text{
+    font-size: 1.5vw;
+}
+
+label{
+    font-size: 1.5vw;
+}
+
+ol li{
+    font-size: 1.5vw;
 }
 
 input{
@@ -103,7 +121,7 @@ input{
 }
 
 input[type = "text"], input[type = "password"]{
-    font-size: 0.4em;
+    font-size: 1.5vw;
     width: 18vw;
     height: 2vw;
     background: rgb(224, 224, 224);
@@ -118,7 +136,7 @@ input[type = "text"]:focus, input[type = "password"]:focus{
 
 input[type = "submit"]{
     background-color: rgb(97, 97, 235);
-    font-size: 0.8em;
+    font-size: 1.5vw;
     margin-left: auto;
     margin-right: auto;
     width: 20vw;
@@ -160,6 +178,33 @@ input[type = "submit"]:hover{
 
 .trButton-leave-active{
     animation: main-animation-text 2s reverse;
+}
+
+#options-form{
+    display: flex;
+}
+
+#form-number-input{
+    width: 5vw;
+    font-size: 1.5vw;
+    background: rgb(224, 224, 224);
+    margin-left: 1%;
+    padding: 0.5%;
+    box-shadow: inset 1px 1px 2px -0.5px gray;
+    transition: all .2s linear;
+}
+
+#form-number-input:focus{
+    box-shadow: inset 1px 1px 2px 0.5px gray;
+}
+
+#form-time{
+    font-size: 1.5vw;
+}
+
+#error-text{
+    color: rgb(221, 31, 31);
+    font-size: 1.5vw;
 }
 
 @keyframes main-animation-text{
